--- a/financial-management-service/package.json
+++ b/financial-management-service/package.json
@@ -20,14 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@apollo/server": "^4.11.3",
-    "@nestjs/apollo": "^13.0.3",
+    "@apollo/server": "4.10.1",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^11.0.1",
+    "apollo-server-express": "^3.5.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
-    "apollo-server-express": "^3.13.0",
     "graphql": "^16.10.0",
     "mysql2": "^3.12.0",
     "reflect-metadata": "^0.2.2",
